Tests are back to Java, because they didn't really run via Gradle when in Kotlin

--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -1641,7 +1641,7 @@
 		French:"Panzer"
 		Czech:"Panzer"
         Polish:"Panzer"
-		Portuguese:"Tanque-Panzer' // to differ from 'Tanque'
+		Portuguese:"Tanque-Panzer" // to differ from 'Tanque'
 	}
 
 	"Bomber":{
