Added tests to alert when we don't have translations for game basics

--- a/android/assets/jsons/Translations/Units,Promotions.json
+++ b/android/assets/jsons/Translations/Units,Promotions.json
@@ -2902,7 +2902,7 @@
 		Ukrainian:"Підрозділ отримає здоровʼя +50. Втрачається можливість поліпшення"
 	}
 
-	"Medic I":{
+	"Medic":{
 		Italian:"Medico I"
 		Simplified_Chinese:"治疗I级"
 		Traditional_Chinese:"治療I級"
